--- a/template/portfolio/index.html
+++ b/template/portfolio/index.html
@@ -82,7 +82,7 @@
         <div class="col-md-6 wow fadeInRight">
           <h2 class="fw-normal">Study</h2>
           <ul class="timeline mt-4 pr-md-5">
-            {% for dic in study %}
+            {% for dic in education %}
             <li>
               <div class="title">{{ dic.date }}</div>
               <div class="details">
@@ -97,7 +97,7 @@
         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
-            {% for dic in exprience %}
+            {% for dic in projects %}
             <li>
               <div class="title">{{ dic.date }}</div>
               <div class="details">
@@ -123,7 +123,7 @@
               <span class="caption">{{ skill.name }}</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="75" aria-valuemin="0"
-                  aria-valuemax="100">{{ skill.proficiency }}</div>
+                  aria-valuemax="100">{{ skill.proficiency }}%</div>
               </div>
             </div>
           </div>
